# CTCMDP

./: .gitignore  LICENSE  README.md  post_process.py  pretrain.py  pyproject.toml  test.py  train.py
configs/: continuous_as_td3.yaml  local_config.yaml  local_pretrain_config.yaml  local_test_config.yaml  main_config.yaml  pretrain_config.yaml  test_config.yaml
configs/agent/: continual_td3.yaml  oracle_tc_m2td3.yaml  sb3_td3.yaml  stacked_tc_m2td3.yaml  tc_m2td3.yaml  td3.yaml  vanilla_tc_m2td3.yaml
configs/experiments/: exp1.yaml  exp2.yaml  exp3.yaml  model_based.yaml  no_hidden.yaml  oracle.yaml
configs/pretrain/: oracle_tc_m2td3.yaml  pretrain1.yaml  pretrain2.yaml  stacked_tc_m2td3.yaml  td3.yaml  vanilla_tc_m2td3.yaml
configs/schedule/: brownian.yaml  linear.yaml  sinusoidal.yaml  static.yaml  uniform.yaml
hydra_plugins/: my_resolvers_plugin.py
pretrained_models/: README.md
pretrained_models/Ant/: TD3_1000000.pth  TD3_1500000.pth  TD3_2000000.pth  TD3_2500000.pth  TD3_3000000.pth  TD3_3500000.pth  TD3_4000000.pth  TD3_4500000.pth  TD3_500000.pth  TD3_5000000.pth  oracle_TCM2TD3_1000000.pth  oracle_TCM2TD3_1500000.pth  oracle_TCM2TD3_2000000.pth  oracle_TCM2TD3_2500000.pth  oracle_TCM2TD3_3000000.pth  oracle_TCM2TD3_3500000.pth  oracle_TCM2TD3_4000000.pth  oracle_TCM2TD3_4500000.pth  oracle_TCM2TD3_500000.pth  oracle_TCM2TD3_5000000.pth  oracle_TCM2TD3_shrink-025_1000000.pth  oracle_TCM2TD3_shrink-025_1500000.pth  oracle_TCM2TD3_shrink-025_2000000.pth  oracle_TCM2TD3_shrink-025_2500000.pth  oracle_TCM2TD3_shrink-025_3000000.pth  oracle_TCM2TD3_shrink-025_3500000.pth  oracle_TCM2TD3_shrink-025_4000000.pth  oracle_TCM2TD3_shrink-025_4500000.pth  oracle_TCM2TD3_shrink-025_500000.pth  oracle_TCM2TD3_shrink-025_5000000.pth  stacked_TCM2TD3_1000000.pth  stacked_TCM2TD3_1500000.pth  stacked_TCM2TD3_2000000.pth  stacked_TCM2TD3_2500000.pth  stacked_TCM2TD3_3000000.pth  stacked_TCM2TD3_3500000.pth  stacked_TCM2TD3_4000000.pth  stacked_TCM2TD3_4500000.pth  (+32 more)
(+268 files in other folders)
