# pyproject.toml

[project]
name = "robust-rl"
version = "0.1.0"
description = "Dependencies for the TCTMDP project."
readme = "README.md"
requires-python = ">=3.10, <3.14"


dependencies = [
    "hydra-core",
    "numpy",
    "coolname",
    "tqdm",
    "tensorboard",
    "torch-tb-profiler>=0.2.0",
    "gymnasium[mujoco]>=1.1.1",
    "imageio",
    "torch",
    "hydra-joblib-launcher",
    "joblib",
]


# 3. Development Dependencies (If you had testing/linting tools, they'd go here)
# Since your list mostly contains runtime packages, we'll keep it simple for now.
# [dependency-groups]
# dev = ["pytest"]

[tool.uv.sources]
torch = { index = "pytorch-cuda", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }


[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
